--- a/apps.json
+++ b/apps.json
@@ -56,7 +56,7 @@
                     "properties": {
                         "phpVersion": "5.6",
                         "netFrameworkVersion": "v4.6",
-                        "use32BitWorkerProcess": false,
+                        "use32BitWorkerProcess": true,
                         "webSocketsEnabled": true,
                         "alwaysOn": true,
                         "remoteDebuggingEnabled": true,
@@ -161,7 +161,7 @@
                     "properties": {
                         "phpVersion": "5.6",
                         "netFrameworkVersion": "v4.5.2",
-                        "use32BitWorkerProcess": false,
+                        "use32BitWorkerProcess": true,
                         "webSocketsEnabled": true,
                         "alwaysOn": true,
                         "remoteDebuggingEnabled": true,
@@ -233,7 +233,7 @@
                     "properties": {
                         "phpVersion": "5.6",
                         "netFrameworkVersion": "v4.5.2",
-                        "use32BitWorkerProcess": false,
+                        "use32BitWorkerProcess": true,
                         "webSocketsEnabled": true,
                         "alwaysOn": true,
                         "remoteDebuggingEnabled": true,
